--- a/RFM_segmentaion_churn_prediction.ipynb
+++ b/RFM_segmentaion_churn_prediction.ipynb
@@ -2965,20 +2965,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 267,
    "id": "33018d12-765c-4c7f-8bf4-cfd5451bc96a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: pathspec 'RFM_segmentation' did not match any files\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! git add RFM_segmentation"
+    "! git add RFM_segmentaion_churn_prediction.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ab0354f-f3f1-4fc1-a1f7-714f93c2c8a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!"
    ]
   }
  ],
